Update feature view transactions history

--- a/survey-now-web-admin/package.json
+++ b/survey-now-web-admin/package.json
@@ -9,6 +9,8 @@
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@mui/x-data-grid": "^6.18.0",
+    "@mui/x-date-pickers": "^6.18.0",
+    "@mui/x-date-pickers-pro": "^6.18.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@syncfusion/ej2": "^19.4.48",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
@@ -21,6 +23,7 @@
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "react": "^17.0.2",
