change API route

--- a/survey-now-web-admin/package.json
+++ b/survey-now-web-admin/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http//SurveyNow-Dev-team.github.io/SurveyNowUI",
   "name": "project_syncfusion_dashboard",
   "version": "0.1.0",
   "private": true,
@@ -24,7 +25,6 @@
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
-    "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -38,6 +38,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -68,6 +70,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19"
   }
